err/finvoicelib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FinvoiceLib-0.1.13.egg-info'...
Listing './lib/python3.5/site-packages/business_tools'...
Compiling './lib/python3.5/site-packages/business_tools/money.py'...
***   File "./lib/python3.5/site-packages/business_tools/money.py", line 63
    print value
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/business_tools/tests'...
Listing './lib/python3.5/site-packages/business_tools-unknown.egg-info'...
Listing './lib/python3.5/site-packages/finvoicelib'...
Listing './lib/python3.5/site-packages/finvoicelib/elements'...
Compiling './lib/python3.5/site-packages/finvoicelib/elements/element.py'...
***   File "./lib/python3.5/site-packages/finvoicelib/elements/element.py", line 222
    except (ValueError, TypeError), e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finvoicelib/main.py'...
***   File "./lib/python3.5/site-packages/finvoicelib/main.py", line 37
    print 'Reading: %s' % filename
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/finvoicelib/reader'...
Compiling './lib/python3.5/site-packages/finvoicelib/reader/finvoice_reader.py'...
***   File "./lib/python3.5/site-packages/finvoicelib/reader/finvoice_reader.py", line 73
    print "========NEW PAYLOAD ============="
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/finvoicelib/resources'...
Listing './lib/python3.5/site-packages/finvoicelib/tests'...
Listing './lib/python3.5/site-packages/finvoicelib/tests/elements'...
Listing './lib/python3.5/site-packages/finvoicelib/tests/reader'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
